--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <p>湯ログは、長崎在住の親子が近隣の温泉の湯めぐり記録のブログです。</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
