--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <a href="#">sanae'湯ログ</a>
+
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -23,7 +24,7 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
+      <h1>I LOVE 温泉.<br>Let's enjoy RELAX TIME.</h1>
       <p>湯ログは、長崎在住の親子が近隣の温泉の湯めぐり記録のブログです。</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">最新ブログはこちら</a>
